<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lay_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.dzy.root.adrping.MainActivity">

    <TextView
        android:id="@+id/show_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_dsp"
        android:ellipsize="middle"
        android:textSize="20sp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="@id/lay_root"
        app:layout_constraintLeft_toLeftOf="@+id/lay_root"
        app:layout_constraintRight_toRightOf="@+id/lay_root"
        app:layout_constraintTop_toTopOf="@id/lay_root"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"/>

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />


    <AutoCompleteTextView
        android:id="@+id/ipaddr_etxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ip_dsp"
        android:completionHint="@string/ip_lastfive"
        android:textSize="20sp"
        android:maxLines="1"
        android:dropDownHorizontalOffset="20sp"
        android:completionThreshold="1"
        android:dropDownHeight="wrap_content"
        android:dropDownWidth="match_parent"
        app:layout_constraintBottom_toBottomOf="@id/show_txt"
        app:layout_constraintLeft_toLeftOf="@+id/lay_root"
        app:layout_constraintRight_toRightOf="@+id/lay_root"
        app:layout_constraintTop_toTopOf="@id/lay_root"/>

    <TextView
        android:id="@+id/dst_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dst_dsp"
        android:ellipsize="middle"
        android:textSize="20sp"
        android:layout_marginTop="50sp"
        app:layout_constraintBottom_toTopOf="@id/ipaddr_etxt"
        app:layout_constraintLeft_toLeftOf="@+id/lay_root"
        app:layout_constraintRight_toRightOf="@+id/lay_root"
        app:layout_constraintTop_toTopOf="@id/lay_root"/>



    <Button
        android:id="@+id/start_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ping_dsp"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/lay_root"
        app:layout_constraintLeft_toLeftOf="@id/lay_root"
        app:layout_constraintRight_toRightOf="@id/guideline"
        app:layout_constraintTop_toTopOf="@id/show_txt"  />

    <Button
        android:id="@+id/cancel_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel_dsp"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/lay_root"
        app:layout_constraintLeft_toLeftOf="@id/guideline"
        app:layout_constraintRight_toRightOf="@id/lay_root"
        app:layout_constraintTop_toTopOf="@id/show_txt" />

</android.support.constraint.ConstraintLayout>
